--- a/Generic/pom.xml
+++ b/Generic/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>LeagueClientAPI</artifactId>
         <groupId>com.hawolt</groupId>
-        <version>1.0</version>
+        <version>1.0.0-okhttpv3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -31,7 +31,7 @@
         <dependency>
             <groupId>com.hawolt</groupId>
             <artifactId>HTTP</artifactId>
-            <version>1.0</version>
+            <version>1.0.0-okhttpv3-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
