--- a/HTTP/pom.xml
+++ b/HTTP/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>LeagueClientAPI</artifactId>
         <groupId>com.hawolt</groupId>
-        <version>1.0</version>
+        <version>1.0.0-okhttpv3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
-            <version>5.0.0-alpha.11</version>
+            <version>3.14.9</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents.core5</groupId>
