--- a/VirtualClient/pom.xml
+++ b/VirtualClient/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>LeagueClientAPI</artifactId>
         <groupId>com.hawolt</groupId>
-        <version>1.0</version>
+        <version>1.0.0-okhttpv3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,21 +15,33 @@
         <dependency>
             <groupId>com.hawolt</groupId>
             <artifactId>YAML</artifactId>
-            <version>1.0</version>
+            <version>1.0.0-okhttpv3-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.hawolt</groupId>
             <artifactId>Authentication</artifactId>
-            <version>1.0</version>
+            <version>1.0.0-okhttpv3-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.hawolt</groupId>
             <artifactId>Version</artifactId>
-            <version>1.0</version>
+            <version>1.0.0-okhttpv3-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.18.28</version>
+                <scope>provided</scope>
+            </dependency>
     </dependencies>
 
     <properties>
