--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.hawolt</groupId>
     <artifactId>LeagueClientAPI</artifactId>
     <packaging>pom</packaging>
-    <version>1.0</version>
+    <version>1.0.0-okhttpv3-SNAPSHOT</version>
 
     <modules>
         <module>RMAN</module>
